--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,34 @@
 {
-  "name": "journal-schedule-front",
-  "version": "1.0.0",
+  "name": "schedule",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build"
+  },
   "dependencies": {
-  }
+    "axios": "^0.24.0",
+    "core-js": "^3.6.5",
+    "cors": "^2.8.5",
+    "html2pdf.js": "^0.10.1",
+    "jspdf": "^2.4.0",
+    "moment": "^2.29.1",
+    "vue": "^3.0.0",
+    "vue-multiselect": "^2.1.6",
+    "vue-router": "^4.0.0-0",
+    "vue-toastification": "^1.7.14",
+    "vuex": "^4.0.2"
+  },
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-vuex": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "@vue/compiler-sfc": "^3.0.0"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
