--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,10 @@
     "express": "^4.17.1",
     "moment": "^2.29.1",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.17.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "sequelize": "^6.17.0"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.4.1"
   }
 }
