--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "html2pdf.js": "^0.10.1",
     "jspdf": "^2.4.0",
     "moment": "^2.29.1",
