--- a/client/package.json
+++ b/client/package.json
@@ -11,16 +11,17 @@
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
+    "moment": "^2.29.3",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
-    "vue-toastification": "^1.7.14",
+    "vue-toastification": "next",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-babel": "^5.0.4",
+    "@vue/cli-plugin-router": "^5.0.4",
+    "@vue/cli-plugin-vuex": "^5.0.4",
+    "@vue/cli-service": "^5.0.4",
     "@vue/compiler-sfc": "^3.0.0"
   },
   "browserslist": [
