--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vue-toastification": "next",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^5.0.4",
