--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,8 @@
     "express": "^4.17.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
-    "sequelize": "^6.17.0"
+    "sequelize": "^6.17.0",
+    "moment": "^2.29.3"
   },
   "devDependencies": {
     "sequelize-cli": "^6.4.1"
