--- a/client/package.json
+++ b/client/package.json
@@ -7,16 +7,18 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@meforma/vue-toaster": "^1.3.0",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
+    "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
+    "vue-toast-notification": "3.0",
     "vue-toastification": "next",
-    "vuex": "^4.0.2",
-    "lodash": "^4.17.21"
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^5.0.4",
