--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "vue-router": "^4.0.0-0",
     "vue-toast-notification": "3.0",
     "vue-toastification": "next",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "vue-loading-overlay": "^5.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^5.0.4",
