--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.0",
+    "@heroicons/vue": "^2.0.10",
     "@meforma/vue-toaster": "^1.3.0",
+    "@vuepic/vue-datepicker": "^3.4.7",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
@@ -15,18 +18,21 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "vue": "^3.0.0",
+    "vue-loading-overlay": "^5.0.3",
     "vue-router": "^4.0.0-0",
     "vue-toast-notification": "3.0",
     "vue-toastification": "next",
-    "vuex": "^4.0.2",
-    "vue-loading-overlay": "^5.0.3"
+    "pinia": "^2.0.22"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^5.0.4",
     "@vue/cli-plugin-router": "^5.0.4",
     "@vue/cli-plugin-vuex": "^5.0.4",
     "@vue/cli-service": "^5.0.4",
-    "@vue/compiler-sfc": "^3.0.0"
+    "@vue/compiler-sfc": "^3.0.0",
+    "autoprefixer": "^10.4.8",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8"
   },
   "browserslist": [
     "> 1%",
