--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
     "sequelize": "^6.17.0",
-    "moment": "^2.29.3"
+    "moment": "^2.29.3",
+    "connect-history-api-fallback": "^2.0.0"
   },
   "devDependencies": {
     "sequelize-cli": "^6.4.1"
