--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,6 @@
-SERVER_DOMAIN="http://10.100.3.20:8080 http://10.100.3.45"
+SERVER_DOMAIN="http://10.100.3.20:8081 http://10.100.3.45"
+
+LDAP_SERVER="ldap://10.100.3.1"
+LDAP_BIND="dc=iat,dc=iat"
+LDAP_USER_SUFFIX="@iat.iat"
+DEBUG_MODE=0
