--- a/server/package.json
+++ b/server/package.json
@@ -10,14 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
+    "connect-history-api-fallback": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
+    "ldap-authentication": "^2.3.2",
+    "moment": "^2.29.3",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
-    "sequelize": "^6.17.0",
-    "moment": "^2.29.3",
-    "connect-history-api-fallback": "^2.0.0"
+    "sequelize": "^6.17.0"
   },
   "devDependencies": {
     "sequelize-cli": "^6.4.1"
