* week split error * scheduleMain.vue - problem with loading

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-SERVER_DOMAIN="http://10.100.3.20:8080 http://10.100.3.45 http://10.100.3.20:7000"
+SERVER_DOMAIN="http://localhost:7000 http://localhost:8080 http://127.0.0.1:8080 http://127.0.0.1:7000"
 
 LDAP_SERVER="ldap://10.100.3.1"
 LDAP_BIND="dc=iat,dc=iat"
