--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "moment": "^2.29.3",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
-    "sequelize": "^6.17.0"
+    "sequelize": "^6.17.0",
+    "sequelize-history": "^1.4.0"
   },
   "devDependencies": {
     "sequelize-cli": "^6.4.1"
