--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.2",
+    "ip-range-check": "^0.2.0",
     "jsonwebtoken": "^8.5.1",
     "ldap-authentication": "^2.3.2",
     "moment": "^2.29.3",
