--- a/client/package.json
+++ b/client/package.json
@@ -11,26 +11,26 @@
     "@heroicons/vue": "^2.0.10",
     "@meforma/vue-toaster": "^1.3.0",
     "@vuepic/vue-datepicker": "^3.4.7",
-    "axios": "^0.24.0",
+    "axios": "^1.7.7",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
+    "ip-range-check": "^0.2.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "pinia": "^2.0.22",
-    "vue": "^3.0.0",
+    "vue": "^3.5.12",
     "vue-loading-overlay": "^5.0.3",
-    "vue-router": "^4.0.0-0",
+    "vue-router": "^4.0.0",
     "vue-toast-notification": "3.0",
-    "vue-toastification": "next",
-    "ip-range-check": "^0.2.0"
+    "vue-toastification": "next"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^5.0.4",
     "@vue/cli-plugin-router": "^5.0.4",
     "@vue/cli-plugin-vuex": "^5.0.4",
     "@vue/cli-service": "^5.0.4",
-    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/compiler-sfc": "^3.5.12",
     "autoprefixer": "^10.4.8",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8"
