--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,34 @@
 **/node_modules
-.idea
+./.idea
 /server/.env
 .gitignore
 /server/config/db.config.js
+
+
+#client side
+./client/.DS_Store
+./client/node_modules
+./client/dist
+./client/vue.config.js
+
+
+# local env files
+./client/.env.local
+./client/.env.*.local
+
+# Log files
+./client/npm-debug.log*
+./client/yarn-debug.log*
+./client/yarn-error.log*
+./client/pnpm-debug.log*
+
+# Editor directories and files
+./client/.idea
+./client/.vscode
+./client/*.suo
+./client/*.ntvs*
+./client/*.njsproj
+./client/*.sln
+./client/*.sw?
+./client/.env
+
